# ghoam

./: .gitignore  flake.nix  go.mod  go.sum  main.go  requirements.md
.direnv/: flake-profile-1-link
cmd/migrate-rollback/: rollback.go
cmd/server/: main.go
internal/accounting/: accountGroup.go  accountGroupErrors.go  accountGroupSort.go  chartOfAccounts.go  chartOfAccounts_test.go  errors.go  models.go  repository.go  sort.go  sort_test.go  transaction.go  transaction_test.go
internal/db/: db_test.go  schema.go  schema_test.go
internal/http/handlers/: chartOfAccounts_handler.go
internal/ordering/: toposort.go
internal/persistence/sqlite/: account_repo_test.go  accountgrouprepo.go  accountgrouprepo_test.go  accountrepo_test.go  repo.go  repositories.go
internal/persistence/sqlite/migrate/: rollback.go
internal/services/: chartOfAccounts_service.go
services/engine/: dune-project  engine.opam
services/engine/lib/: accounting_types.ml  dune  journal_entry.ml  journal_entry.mli
services/engine/test/journal_entry/: dune  journal_entry_test.ml
services/engine_proofs/: Ledger.v
services/event_source/: dune-project
services/event_source/test/: dune  test_event_source.ml
services/event_sourcing/: dune-project
services/event_sourcing/src/: dune  hello.ml
services/web/: go.sum  main.go
services/web/cmd/migrate/: main.go
services/web/internal/accounting/: accountGroupErrors.go  accountGroupSort.go  id.go  (+4 more)
services/web/templates/: chart.gohtml  chart_fragment.gohtml
templates/: chart.gohtml  chart.tmpl  index.gohtml  index.tmpl  layout.gohtml
(+14 files in other folders)
