(lang dune 3.17)

(name engine)

(generate_opam_files true)

(source
 (github hoodnoah/ghoam))

(authors "Noah Hood <hoodnoah@icloud.com>")

(maintainers "Noah Hood <hoodnoah@icloud.com>")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name event_source)
 (synopsis "A double-entry accounting engine leveraging event sourcing")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
